2005-10-29  Don Allingham  <don@gramps-project.org>
	* src/Sources.py: fix callback (caught by Martin)

2005-10-28  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/TimeLine.py: Import strip_context correctly.
	* src/plugins/SimpleBookText.py: Import strip_context correctly.
	* src/plugins/StatisticsChart.py: Import strip_context correctly.

2005-10-27  Don Allingham  <don@gramps-project.org>
	* src/AddSpouse.py: glade fixes caught by Martin
	* src/AttrEdit.py: glade fixes caught by Martin
	* src/EditPerson.py: glade fixes caught by Martin
	* src/EditPlace.py: glade fixes caught by Martin
	* src/Marriage.py: glade fixes caught by Martin
	* src/SelectChild.py: glade fixes caught by Martin

2005-10-26  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/CmdRef.py (write_ref): Only write itemizedlist if
	there is any contents for it.
	* doc/gramps-manual/C/cmdplug.xml: Update to a valid docbook.
	* doc/gramps-manual/C/usage.xml: Add manual on the Narrative web
	page generator.	

2005-10-25  Don Allingham  <don@gramps-project.org>
	* src/latin_utf8.py: removed
	* src/Makefile.am: remove latin_utf8.py

2005-10-25  Alex Roitman  <shura@gramps-project.org>
	* src/ReadGedcom.py (parse_source_reference): Ignore empty QUAY.

2005-10-24  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: signal_autoconnect changes
	* src/ImageSelect.py: signal_autoconnect changes
	* src/ReadGedcom.py: signal_autoconnect changes
	* src/WriteGedcom.py: signal_autoconnect changes
	* src/gedcomimport.glade: signal_autoconnect changes
	* src/gramps.glade: signal_autoconnect changes

2005-10-24  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/WriteGedcom.py: export more objects, better conformance with
	the spec, preserve timestamps on objects
	* src/const.py.in: add table of GEDCOM tags that take a value on the
	* src/ImageSelect.py: signal fix

2005-10-23  Don Allingham  <don@gramps-project.org>
	* src/ReadGedcom.py: handle progress bar